# AndroidStudy

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cxp/androidstudy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cmaketest/v00/: readme
app/src/main/cmaketest/v01/: CMakeLists.txt
app/src/main/cmaketest/v02/: CMakeLists.txt  main.cpp
app/src/main/cmaketest/v02/src/: main.cpp
app/src/main/cmaketest/v03/: CMakeLists.txt
app/src/main/cmaketest/v03/src/: sub.cpp
app/src/main/cmaketest/v04/: CMakeLists.txt
app/src/main/cmaketest/v04/src/: add.cpp
app/src/main/cmaketest/v05/: CMakeLists.txt
app/src/main/cmaketest/v06/: CMakeLists.txt  readme
app/src/main/cmaketest/v06/add/: CMakeLists.txt
app/src/main/cmaketest/v06/sub/: CMakeLists.txt
app/src/main/cmaketest/v06/test1/: CMakeLists.txt  test1.cpp
app/src/main/cmaketest/v06/test2/: CMakeLists.txt  test2.cpp
app/src/main/cmaketest/v07/: CMakeLists.txt  readme
app/src/main/cmaketest/v07/add/: CMakeLists.txt
app/src/main/cmaketest/v07/sub/: CMakeLists.txt
app/src/main/cmaketest/v07/test/: CMakeLists.txt
app/src/main/cmaketest/v08/: CMakeLists.txt  readme
app/src/main/cmaketest/v08/add/: CMakeLists.txt
app/src/main/cmaketest/v08/sub/: CMakeLists.txt  sub.cpp
app/src/main/cmaketest/v08/test/: CMakeLists.txt
app/src/main/cpp/: CMakeLists.txt  dn_android_linux.c  dn_audio_player.c  dn_ffmpeg_player.c  dn_ffmpeg_player.cpp  dn_video_player.c  media.cpp  native-lib.cpp
app/src/main/cpp/include/: queue.h
app/src/main/cpp/include/utils/: common.h  logger.h
app/src/main/cpp/live/: audio.c  dn_live.c  queue.c  rtmp.c  video.c
app/src/main/cpp/opensl/: AudioPlayer.cpp
app/src/main/cpp/player/: dn_audio_player.c  dn_player.c  dn_video_player.c  location_error.c  queue.c
app/src/main/cpp/pthread/: 01.c  02.c  03.c
app/src/main/cpp/push/: JasonPushStream.c
app/src/main/java/com/cxp/androidstudy/: HelloWorldActivity.java  MainActivity.java
app/src/main/java/com/dongnaoedu/androidlinux/: MainActivity.java  PosixThread.java  UUIDUtils.java
app/src/main/java/com/dongnaoedu/dnffmpegplayer/: JasonPlayer.java  MainActivity.java  PThreadTest.java  VideoUtils.java
app/src/main/java/com/dongnaoedu/dnffmpegplayer/view/: VideoView.java
app/src/main/java/com/dongnaoedu/jasonpushstream/: FFmpegUtils.java  MainActivity.java
app/src/main/java/com/dongnaoedu/live/: MainActivity.java  Nv21ToBitmap.java
app/src/main/java/com/dongnaoedu/live/jni/: PushNative.java
app/src/main/java/com/dongnaoedu/live/listener/: LiveStateChangeListener.java
app/src/main/java/com/dongnaoedu/live/params/: AudioParam.java  VideoParam.java
app/src/main/java/com/dongnaoedu/live/pusher/: AudioPusher.java  LivePusher.java  Pusher.java  VideoPusher.java
app/src/main/java/com/dongnaoedu/live/util/: BitmapUtil.java  Const.java  FileUtil.java
app/src/main/java/com/dongnaoedu/opensl/: AudioPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_helloworld.xml  activity_main.xml  activity_opensl.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/cxp/androidstudy/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
transcode-1.1.7/: .hg_archival.txt  .hgignore  .hgtags  configure.in
transcode-1.1.7/avilib/: Android.mk  CMakeLists.txt
transcode-1.1.7/encode/: encode_lavc.c
transcode-1.1.7/filter/: filter_doublefps.c  filter_pp.c  filter_resample.c  filter_yait.c
transcode-1.1.7/filter/subtitler/: load_font.c
transcode-1.1.7/import/: Makefile.am  decode_lavc.c  decode_mov.c  decode_mp3.c  import_ffmpeg.c  import_mov.c  import_pv3.c  import_pvn.c  mpg123.c  probe_ffmpeg.c  probe_mov.c  scan_pes.c
transcode-1.1.7/libtc/: ratiocodes.c
transcode-1.1.7/libtcexport/: multiplexor.c
transcode-1.1.7/libtcext/: tc_avcodec.h
transcode-1.1.7/libtcmodule/: tcmoduleregistry.c
transcode-1.1.7/libtcutil/: tctimer.c
transcode-1.1.7/mpeglib/: packet.c
transcode-1.1.7/multiplex/: multiplex_lavf.c
transcode-1.1.7/src/: cmdline_def.h
